Alignment fixes and more CSS and HTML fixes

--- a/src/app/combined-display/combined-display.component.css
+++ b/src/app/combined-display/combined-display.component.css
@@ -1,23 +1,62 @@
 .combined-display {
-    margin: 2rem;
+    display: grid;
+    grid-template-columns: auto;
+    margin: 1rem 5rem 5rem 5rem;
+    height: 100%;
+}
+
+.metadata {
+    margin: auto;
+    padding: auto;
+    width: 100%;
+    min-height: 10rem;
+    overflow-wrap: break-word;
+    font-family: 'Roboto', sans-serif;
+    grid-column: 1 / span 2;
 }
 
 .pie-and-words {
-    margin: 2rem;
-    display: flex;
-    flex-direction: row;
+    margin: auto;
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 50% 50%;
 }
 
 .pie {
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin: auto;
+    width: 100%;
+    height: 100%;
 }
 
 .words {
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin: auto;
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
     font-family: 'Roboto', sans-serif;
+}
+
+h1.word-cloud-title {
+    text-align: center;
+}
+
+h1.pie-title {
+    text-align: center;
+}
+
+.pie-wrapper {
+    width: 100%;
+    margin: auto;
+    padding: auto;
+    position: relative;
+}
+
+.word-wrapper {
+    margin: auto;
+    width: 100%;
+    margin-top: 4rem;
+    position: relative;
 }
