--- a/src/app/pie-chart/pie-chart.component.css
+++ b/src/app/pie-chart/pie-chart.component.css
@@ -1,3 +1,3 @@
 #pie-chart {
-    margin: 2rem;
+    margin: auto;
 }
